welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:26: error: overriding method back in class AbstractBuggle of type ()Unit;
 method back needs `override' modifier
def back()
    ^