welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
var c: Color = Color.YELLOW

def point(c : Color)
{
	setCouleurBrosse(c: Color);
	baisseBrosse;
	leveBrosse;
}


def fleur (c : Color)
{
	point (c : Color);
	avance;
	point(Color.YELLOW);
	gauche; avance; 
	point (c : Color)
	recule; recule;
	point (c : Color);
	avance; droite; avance;
	point (c : Color)
	
}

def back()
{
	fleur(Color.RED);
	avance; avance; 
	fleur(Color.CYAN);
	droite; avance;avance;avance;avance;gauche; recule; recule;
	fleur(Color.GREEN);
	recule;recule;recule;recule;recule;recule;
	fleur(Color.PINK);
	gauche;avance;avance;droite;
	fleur(Color.ORANGE);
	droite;avance;avance;gauche;recule;recule;recule;recule;
}

def growFlowers()
{
	back;
	speedrun;
	inti;
	back;
	speedrun;
	back;
	
}

def speedrun()
{
	avance;avance;avance;avance;avance;avance;
	gauche;
	avance; avance; droite;
	fleur(Color.BLUE);
	gauche;avance;avance;droite;
	
}

def inti ()
{
	droite;
	avance;droite; avance;avance;avance;avance;avance;avance;avance;avance;
	gauche;
	avance;avance;avance;gauche;
}
